apps/downloads/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: downloads
  labels:
    app: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 8090
      targetPort: 8090
  type: ClusterIP
